--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,5 +25,5 @@ html(ng-app="myApp")
               a(ng-href='{{current_lga}}/education') Education Facilities
           button.btn.printouts Download Printouts
 
-    div(ng-view)
+    div.view(ng-view)
     block body
