--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -8,7 +8,7 @@ html
               h3 Baseline List
                 span.unmatched ({{}} unmatched)
               label.search Search
-                input(ng-model="lgaEduSearch")
+                input(ng-model="lgaEduSearch", type="search")
               .table-wrapper
                 table.table.table-bordered.table-hover
                   thead
@@ -27,7 +27,6 @@ html
                       td {{facility['Schools.school_name']}}
                       td {{facility['Schools.com_name']}}
                       td {{facility['Schools.level_of_education']}}
-                      dt  LGA:
                       //{{facility.mylga}}
                       //{{facility.mylga_state}}
           //  | Sort by:
@@ -41,7 +40,7 @@ html
               h3 Facility List&nbsp;
                 span.unmatched ({{}} unmatched)
               label.search Search
-                input(ng-model='nmisEduSearch')
+                input(ng-model='nmisEduSearch', type="search")
               .guidance Click&nbsp;
                 button.btn.btn-small.btn-match.no-hover Match
                 | &nbsp;on the matching facility
@@ -69,7 +68,7 @@ html
             span.matched-length ({{pairs.length}})
           #matched_list_{{$index}}
             .pairs(ng-repeat='pair in pairs')
-              button.btn.btn-small.putback(ng-click="removePair()")
+              button.btn.btn-small.btn-putback(ng-click="removePair()")
                i.icon-putback
               dl 
                 dt {{pair[0].id}}
@@ -78,5 +77,5 @@ html
                 dt {{pair[1].id}}
                 dd {{pair[1].facility_name}}
             div.putback-guidance If you made an error, put facilities back by clicking 
-              button.btn.btn-small.putback
+              button.btn.btn-small.btn-putback
                 i.icon-putback
