--- a/views/partials/health.jade
+++ b/views/partials/health.jade
@@ -9,7 +9,7 @@ html
               h3 Baseline List&nbsp;
                 span.unmatched ({{}} unmatched)
               label.search Search
-                input(ng-model="lgaHealthSearch")
+                input(ng-model="lgaHealthSearch", type="search")
               .table-wrapper
                 table.table.table-bordered.table-hover
                   thead
@@ -41,7 +41,7 @@ html
               h3 Facility List&nbsp;
                 span.unmatched ({{}} unmatched)
               label.search Search
-                input(ng-model="nmisHealthSearch")
+                input(ng-model="nmisHealthSearch", type="search")
               .guidance Click&nbsp;
                 button.btn.btn-small.btn-match.no-hover Match
                 | &nbsp;on the matching facility
@@ -68,7 +68,7 @@ html
             span.matched-length ({{pairs.length}})
           #matched_list_{{$index}}
             .pairs(ng-repeat='pair in pairs')
-              button.btn.btn-small.putback(ng-click="removePair()")
+              button.btn.btn-small.btn-putback(ng-click="removePair()")
                i.icon-putback
               dl 
                 dt {{pair[0].id}}
@@ -77,5 +77,5 @@ html
                 dt {{pair[1].id}}
                 dd {{pair[1].facility_name}}
             div.putback-guidance If you made an error, put facilities back by clicking 
-              button.btn.btn-small.putback
+              button.btn.btn-small.btn-putback
                 i.icon-putback
