--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -23,10 +23,10 @@ html
                     tr(ng-repeat='facilty in facilities | orderBy:predicate:reverse | filter:lgaEduSearch')(ng-click="select()")
                       td
                       td {{$index+1}}
-                      td {{facility['Schools.ward_name']}}
-                      td {{facility['Schools.school_name']}}
-                      td {{facility['Schools.com_name']}}
-                      td {{facility['Schools.level_of_education']}}
+                      td {{facility.ward_name}}
+                      td {{facility.school_name}}
+                      td {{facility.com_name}}
+                      td {{facility.level_of_education}}
                       //{{facility.mylga}}
                       //{{facility.mylga_state}}
           //  | Sort by:
@@ -59,9 +59,9 @@ html
                         button.btn.btn-small.btn-match(ng-click='match(facility)') Match
                       td {{$index+1}}
                       td {{facility.ward}}
-                      td {{facility.facility_name}}
+                      td {{facility.school_name}}
                       td {{facility.community}}
-                      td {{facility.facility_type}}
+                      td {{facility.level_of_education}}
 
         section.span2#matches_list(ng-controller='PairedListCtrl')
           h4 Matched Facilities&nbsp;
