--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -5,7 +5,7 @@ html
         .span10.main
           section#lga_list(name='facility_section', ng-controller='LGAEduCtrl')
             .inner
-              h3 Baseline List
+              h3 Baseline List&nbsp;
                 span.unmatched ({{}} unmatched)
               label.search Search
                 input(ng-model="lgaEduSearch", type="search")
