--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,35 +10,34 @@ html, body, .container-fluid, .row-fluid, .span10, #matches_list, .inner{
 	height: 85%;
 	overflow: hidden;
 }
-
-#nmis_list, #lga_list{
+#lga_list{
   height: 45%;
-  padding: 25px;
-  overflow: hidden;
 }
-
+#lga_list .table-wrapper{
+  height: 83%;
+}
+#nmis_list{
+  height: 55%;
+}
+#nmis_list .table-wrapper{
+  height: 75%;
+}
+.inner{
+  padding: 25px;
+  box-sizing: border-box;
+}
 .table-wrapper{
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 80%;
   overflow-y: auto;
 }
-
 [id^="matched_list_"]{
   height: 100%;
   overflow-y: auto;
+  padding-right: 10px;
 }
 
-/** visual styles **/
-body {
-  background: rgb(240,240,240);
-	padding-left: 5px; padding-right: 5px;
-}
-
-.main{
-  background-color: rgb(63,98,116);
-}
 
 /* navbar quick fixes but needs to be done better */
 .navbar .brand{
@@ -68,44 +67,61 @@ body {
   margin-top: 15px;
 }
 
+
+/** visual styles **/
+body {
+  background: rgb(240,240,240);
+	padding-left: 5px; padding-right: 5px;
+}
+.main{
+  background-color: rgb(63,98,116);
+}
 .icon-putback{
   background-image: url("../images/icon-putback.png");
   background-position: 0 0;
 }
-
 h3{
+  margin-top: -10px;
   font-weight: normal;
 }
-
+h4{
+  margin-top: -3px;
+}
 .unmatched{
   font-weight: normal;
   color: rgb(178,196,204);
 }
-
 .matched-length{
   color: rgb(100,100,100);
 }
-
 .guidance{
   font-size: 17px;
   color: rgb(144, 213, 248);
 }
-
 table{
   background-color: #fafafa;
 }
 .table{
   margin-bottom: 0;
 }
-
 .table-bordered{
   border-radius: 0;
 }
-
-th:first-child{
-  width: 50px;
+th:first-child, td:first-child{
+  width: 55px;
 }
-
+th:nth-child(2), td:nth-child(2){
+  width: 6%;
+}
+th:nth-child(3), td:nth-child(3){
+  width: 12%;
+}
+th:nth-child(4), td:nth-child(4){
+  width: 30%;
+}
+th:nth-child(5), td:nth-child(5){
+  width: 25%;
+}
 tbody tr.active{
   background-color: rgb(132, 201, 235);
   font-weight: bold;
@@ -113,47 +129,37 @@ tbody tr.active{
 tbody tr.matched{
   opacity: 0.5;
 }
-
 .search{
   font-weight: normal;
   float: right;
 }
-
 #lga_list .search{
   margin-top: -42px;
 }
-
 input[type="search"]{
   margin-left: 10px;
 }
-
 .btn-match, .guidance .btn-match:hover, .guidance .btn-match:focus{
   background: rgb(132, 201, 235);
   font-weight: bold;
   font-size: 13px;
   padding: 0 7px 2px 7px;
 }
-
 #lga_list{
   padding-bottom: 0;
 }
-
 #nmis_list{
   padding-top: 0;
 }
-
 #lga_list .inner{
   border-bottom: 4px solid rgb(43, 68, 80);
 }
-  
 #nmis_list h3, #lga_list h3, .search{
   color: #ffffff;
 }
-
 .pairs{
   border-bottom: 2px solid #aaa;
 }
-
 .pairs dt, dd{
   font-weight: bold;
 }
@@ -163,7 +169,6 @@ input[type="search"]{
 .pairs dd{
   display: inline;
 }
-
 .btn-putback{
   float: right;
 }
