latest rowo design tweaks, better pairs scrolling

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html(ng-app="myApp")
               a(ng-href='{{current_lga}}/health') Health Facilities
             li
               a(ng-href='{{current_lga}}/education') Education Facilities
-          button.btn.printouts Download Printouts
+          button.btn.printouts Download List Printouts
 
     div.view(ng-view)
     block body
