--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,11 +3,10 @@ html, body, .container-fluid, .row-fluid, .span10, #matches_list, .inner{
 	height: 100%;
 }
 .navbar{
-  height: 8%;
-  min-height: 50px;
+  margin-bottom: 5px;
 }
 .view{
-	height: 85%;
+	height: 90%;
 	overflow: hidden;
 }
 #lga_list{
@@ -33,9 +32,17 @@ html, body, .container-fluid, .row-fluid, .span10, #matches_list, .inner{
   overflow-y: auto;
 }
 [id^="matched_list_"]{
+  position: relative;
   height: 100%;
-  overflow-y: auto;
+}
+.pairs-wrapper{
+  height: 75%;
   padding-right: 10px;
+  overflow-y: auto;
+}
+.putback-guidance{
+  position: absolute;
+  bottom: 0;
 }
 
 
@@ -43,9 +50,14 @@ html, body, .container-fluid, .row-fluid, .span10, #matches_list, .inner{
 .navbar .brand{
   padding-top: 15px;
   color: black;
+  font-weight: 800;
 }
-.nav{
+.navbar .nav{
   padding-top: 5px;
+  margin-left: 40px;
+}
+.nav .active{
+  text-decoration: underline;
 }
 .brand img{
   width: 32px;
@@ -61,6 +73,7 @@ html, body, .container-fluid, .row-fluid, .span10, #matches_list, .inner{
 .navbar-inner .lga{
   float: left;
   padding-top: 15px;
+  margin-left: 50px;
 }
 .navbar .btn.printouts{
   float: right;
@@ -149,6 +162,13 @@ input[type="search"]{
   font-size: 13px;
   padding: 0 7px 2px 7px;
 }
+.star{
+  display: inline-block;
+  width: 72px;
+  height: 37px;
+  background: rgb(132, 201, 235) url("../images/icon-star.png") no-repeat 25px 10px;
+  margin: 0 0 -10px 0;
+}
 #lga_list{
   padding-bottom: 0;
 }
@@ -162,7 +182,7 @@ input[type="search"]{
   color: #ffffff;
 }
 .pairs{
-  border-bottom: 2px solid #aaa;
+  border-bottom: 1px solid #aaa;
 }
 .pairs dt, dd{
   font-weight: bold;
@@ -175,9 +195,6 @@ input[type="search"]{
 }
 .btn-putback{
   float: right;
-}
-.putback-guidance{
-  margin-top: 15px;
 }
 .putback-guidance .btn-putback{
   float: none;
