--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -21,7 +21,7 @@ html
                       th  Community
                       th  Facility Type
                   tbody
-                    tr(ng-repeat='facilty in facilities | orderBy:predicate:reverse | filter:lgaEduSearch')(ng-click="select()")
+                    tr(ng-repeat='facilty in facilities | orderBy:predicate:reverse | filter:lgaEduSearch', ng-click="select()")
                       td
                       td {{$index+1}}
                       td {{facility.ward_name}}
