--- a/views/partials/health.jade
+++ b/views/partials/health.jade
@@ -20,7 +20,7 @@ html
                       th  Community
                       th  Facility Type
                   tbody
-                    tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:lgaHealthSearch')(ng-click="select()")
+                    tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:lgaHealthSearch', ng-click="select()")
                       td  
                       td  {{$index+1}}
                       td  {{facility.ward_name}}
