--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,10 +56,17 @@ html, body, .container-fluid, .row-fluid, .span10, #matches_list, .inner{
   padding-top: 5px;
   margin-left: 40px;
 }
+.navbar .nav > .active > a{
+  background: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
 .nav .active{
   font-weight: bold;
   text-decoration: underline;
 }
+
 .brand img{
   width: 24px;
   margin: -8px 8px 0 0;
