making sure the persistence of pairing, unpairing, in browser and in the back end sort of like a promise obj for the back end changes in case of bad internet connection

--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -67,7 +67,7 @@ html
             span.matched-length ({{pairs.length}})
           #matched_list_{{$index}}
             .pairs(ng-repeat='pair in pairs')
-              button.btn.btn-small.btn-putback(ng-click="removePair()")
+              button.btn.btn-small.btn-putback(ng-click="removePair(pair)")
                i.icon-putback
               dl 
                 dt Facility
