--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -61,18 +61,18 @@ html
                       td {{facility.level_of_education}}
         section.span2#matches_list(ng-controller='PairedListCtrl')
           #matched_list_{{$index}}
-          h4 Matched Facilities&nbsp;
-            span.matched-length ({{pairs.length}})
-          .pairs-wrapper
-            .pairs(ng-repeat='pair in pairs')
-              button.btn.btn-small.btn-putback(ng-click="removePair(pair)")
-               i.icon-putback
-              dl 
-                dt Facility
-                dd {{pair.health_facility_name}}
-                &nbsp;matches&nbsp;
-                dt NMIS
-                dd {{pair.nmis.facility_name}}
+            h4 Matched Facilities&nbsp;
+              span.matched-length ({{pairs.length}})
+            .pairs-wrapper
+              .pairs(ng-repeat='pair in pairs')
+                button.btn.btn-small.btn-putback(ng-click="removePair(pair)")
+                 i.icon-putback
+                dl 
+                  dt Facility
+                  dd {{pair.school_name}}
+                  &nbsp;matches&nbsp;
+                  dt NMIS
+                  dd {{pair.nmis.school_name}}
             div.putback-guidance If you made an error, put facilities back by clicking 
               button.btn.btn-small.btn-putback
                 i.icon-putback
