--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -9,9 +9,7 @@ html
                 span.unmatched ({{}} unmatched)
               label.search Search
                 input(ng-model="nmisHealthSearch", type="search")
-              .guidance Click&nbsp;
-                button.btn.btn-small.btn-match.no-hover Match
-                | &nbsp;on the matching facility
+              .guidance Click on the matching facility to match
               .table-wrapper
                 table.table.table-bordered.table-hover
                   thead
