--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html(ng-app="myApp")
           a.brand(href='#')
             img(src='/images/logo.png')
             | NMIS/LGA Facility Matching Tool
-          span.lga LGA: {{current_lga}}
+          span.lga LGA: {{current_lga_name}}
           ul.nav
             li(class="ng-class:{ active: currentSector == 'health'}")
               a(ng-href='{{current_lga}}/health') Health Facilities
