make header fit small laptop screen

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html(ng-app="myApp")
               a(ng-href='{{current_lga}}/health') Health Facilities
             li(class="ng-class:{ active: currentSector == 'edu'}")
               a(ng-href='{{current_lga}}/education') Education Facilities
-          button.btn.printouts Download List Printouts
+          button.btn.printouts Download List
 
     div.view(ng-view)
     block body
